# flowforge

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  GITHUB_SETUP.txt  push_to_github.bat  pyproject.toml  requirements.txt  run.py  test_scrape_to_excel.py
src/: __init__.py
src/api/: main.py
src/auth/: __init__.py  auth.py
src/connectors/: __init__.py  airtable.py  auth_http.py  base.py  discord.py  email.py  github.py  google_sheets.py  http.py  notion.py  registry.py  slack.py  webhook.py
src/connectors/auth/: __init__.py  custom_auth.py  oauth2.py  token_store.py
src/connectors/cloud/: __init__.py  aws_s3.py  azure_blob.py  box.py  dropbox.py  gcs.py  onedrive.py
src/connectors/crm/: __init__.py  freshsales.py  hubspot.py  pipedrive.py  salesforce.py  zoho.py
src/connectors/databases/: __init__.py  azure_sql.py  bigquery.py  cassandra.py  clickhouse.py  cockroachdb.py  dynamodb.py  elasticsearch.py  firebase.py  mariadb.py  mongodb.py  mysql.py  oracle.py  planetscale.py  postgresql.py  redis.py  redshift.py  snowflake.py  sqlite.py  sqlserver.py  supabase.py
src/connectors/payments/: __init__.py  paypal.py  square.py  stripe.py
src/connectors/productivity/: __init__.py  asana.py  clickup.py  jira.py  (+3 more)
src/core/: __init__.py  api_parser.py  code_generator.py  llm_engine.py  service_registry.py  templates.py  workflow.py
src/db/: __init__.py  database.py  models.py
src/runtime/: __init__.py  executor.py  logger.py  scheduler.py  webhooks.py
src/utils/: __init__.py  credentials.py
tests/: __init__.py  test_api_parser.py  test_workflow.py
(+6 files in other folders)
